fixed and updated  the authenticatin and api

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
 PORT=5001
 NODE_ENV=development
+JWT_SECRET=change_this_to_a_secure_random_string
+JWT_EXPIRE=7d
+# Example local MongoDB connection. Replace with your MongoDB Atlas URI if needed
+MONGODB_URI=mongodb://localhost:27017/minormap
